# Caldera_ICM

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  README.md
misc/next_gen_prof_testing/: .gitignore  CMakeLists.txt  ICM_Aux.cpp  ICM_Aux.py  ICM_Full.cpp  ICM_NextGen.cpp  ICM_charge_profile.py  bev250_350kW_xfc_350_10_90.csv  plot_icm_nextgen.py
misc/next_gen_prof_testing/inputs/: EV_inputs.csv
misc/temperature_aware/: .gitignore  CMakeLists.txt  compute_tgrad_coeffs.py  look_v1.py  look_v2.py  multiple_curves_generator.cpp  temperature_aware_profiles.h
misc/temperature_aware/inputs/: EV_inputs.csv
source/: CMakeLists.txt  dcfc_charge_profile.csv  main.cpp
source/base/: Aux_interface.cpp  Aux_interface.h  Aux_python_bind.cpp  Aux_setup.py  CMakeLists.txt  ICM_interface.cpp  ICM_interface.h  ICM_python_bind.cpp  ICM_setup.py  SE_EV_factory_charge_profile.cpp  SE_EV_factory_charge_profile.h  ac_to_dc_converter.cpp  ac_to_dc_converter.h  battery.cpp  battery.h  battery_calculate_limits.cpp  battery_calculate_limits.h  battery_integrate_X_in_time.cpp  battery_integrate_X_in_time.h  charge_profile_downsample_fragments.cpp  charge_profile_downsample_fragments.h  charge_profile_library.cpp  charge_profile_library.h  datatypes_module.cpp  datatypes_module.h  helper.cpp  helper.h  inputs.h  supply_equipment.cpp  supply_equipment.h  supply_equipment_control.cpp  supply_equipment_control.h  supply_equipment_group.cpp  supply_equipment_group.h  supply_equipment_load.cpp  supply_equipment_load.h  vehicle_charge_model.cpp  vehicle_charge_model.h
source/charging_models/: CMakeLists.txt  EVSE_characteristics.cpp  EVSE_characteristics.h  EV_EVSE_inventory.cpp  EV_EVSE_inventory.h  EV_characteristics.cpp  EV_characteristics.h  charging_models_python_bind.cpp  datatypes_global.cpp  datatypes_global.h  makefile  setup.py
source/charging_models/DirectXFC/: SE_EV_factory.cpp  SE_EV_factory.h  SE_EV_factory_DirectXFC_depreciated.cpp  SE_EV_factory_DirectXFC_depreciated.h  datatypes_global_SE_EV_definitions.cpp  datatypes_global_SE_EV_definitions.h  python_bind.cpp  python_bind_DirectXFC_depreciated.cpp
source/charging_models/EVs_at_Risk/: SE_EV_factory.cpp  SE_EV_factory.h  datatypes_global_SE_EV_definitions.cpp  datatypes_global_SE_EV_definitions.h  python_bind.cpp
source/charging_models/eMosaic/: SE_EV_factory.cpp  SE_EV_factory.h  datatypes_global_SE_EV_definitions.cpp  datatypes_global_SE_EV_definitions.h  python_bind.cpp
source/factory/: CMakeLists.txt  EV_charge_model_factory.cpp  EV_charge_model_factory.h  P2_vs_battery_efficiency_factory.cpp  P2_vs_battery_efficiency_factory.h  SOC_vs_P2_factory.cpp  SOC_vs_P2_factory.h  charging_transitions_factory.cpp  charging_transitions_factory.h  factory_EV_charge_model.cpp  factory_EV_charge_model.h  factory_P2_vs_battery_efficiency.cpp  factory_P2_vs_battery_efficiency.h  factory_SOC_vs_P2.cpp  factory_SOC_vs_P2.h  factory_ac_to_dc_converter.cpp  factory_ac_to_dc_converter.h  factory_charging_transitions.cpp  factory_charging_transitions.h  factory_puVrms_vs_P2.cpp  factory_puVrms_vs_P2.h  factory_supply_equipment_model.cpp  factory_supply_equipment_model.h  puVrms_vs_P2_factory.cpp  puVrms_vs_P2_factory.h  temperature_aware_profiles.h
source/globals/: CMakeLists.txt  datatypes_global.cpp  datatypes_global.h  globals_python_bind.cpp  helper.cpp  helper.h  inputs.h
source/load_inputs/: CMakeLists.txt  load_EVSE_inventory.cpp  load_EVSE_inventory.h  load_EVSE_models.cpp  load_EVSE_models.h  load_EV_EVSE_inventory.cpp  load_EV_EVSE_inventory.h  load_EV_inventory.cpp  load_EV_inventory.h  load_EV_models.cpp  load_EV_models.h  load_helper.cpp  load_helper.h  main.cpp
source/pev_charge_profile_factory/create_library/: CMakeLists.txt  compile.sh  main.cpp  pev_charge_profile_factory.cpp  pev_charge_profile_factory.h  python_bind.cpp  setup.py
source/pev_charge_profile_factory/generate_charge_profiles/: L1_L2_inputs.csv  dcfc_inputs.csv  generate_charge_profiles.py
test/: CMakeLists.txt  run_models.cpp
unittests/: CMakeLists.txt
unittests/test_ALAP_control_strategy/: CMakeLists.txt  plot_results.py  test_ALAP_control_strategy.cpp
unittests/test_ASAP_control_strategy/: CMakeLists.txt  plot_results.py  test_ASAP_control_strategy.cpp
unittests/test_ToU_ALAP_control_strategy/: CMakeLists.txt  plot_results.py  test_ToU_ALAP_control_strategy.cpp
unittests/test_ToU_FLAT_control_strategy/: CMakeLists.txt  plot_results.py  test_ToU_FLAT_control_strategy.cpp
unittests/test_ToU_RANDOM_M2_control_strategy/: CMakeLists.txt  test_ToU_RANDOM_M2_control_strategy.cpp
unittests/test_ToU_RANDOM_M3_control_strategy/: CMakeLists.txt  plot_results.py  test_ToU_RANDOM_M3_control_strategy.cpp
unittests/test_charging_models/: .gitignore  CMakeLists.txt  main.cpp  validate.py
unittests/test_charging_models/original_dxfc_models/: dcfc_50_bev150_ld1_50kW.csv  xfc_350_bev300_575kW.csv
unittests/test_charging_models_DirectXFC/: .gitignore  CMakeLists.txt  main.cpp  validate.py
unittests/test_charging_models_DirectXFC/original_dxfc_models/: L1_1440_bev150_150kW.csv  L1_1440_bev150_ld1_50kW.csv  L1_1440_bev200_ld4_150kW.csv  L1_1440_bev250_350kW.csv  L1_1440_bev250_400kW.csv  L1_1440_bev250_ld1_75kW.csv  L1_1440_bev250_ld2_300kW.csv  L1_1440_bev275_ld1_150kW.csv  L1_1440_bev300_300kW.csv  L1_1440_bev300_400kW.csv  L1_1440_bev300_575kW.csv  L1_1440_phev20.csv  L1_1440_phev50.csv  L1_1440_phev_SUV.csv  L2_11520_bev300_575kW.csv  L2_17280_bev275_ld1_150kW.csv  L2_17280_bev300_400kW.csv  L2_3600_bev150_ld1_50kW.csv  L2_3600_bev250_ld1_75kW.csv  L2_3600_phev_SUV.csv  L2_7200_bev150_150kW.csv  L2_7200_bev200_ld4_150kW.csv  L2_7200_bev250_350kW.csv  L2_7200_bev250_400kW.csv  L2_7200_phev50.csv  L2_9600_bev250_ld2_300kW.csv  (+28 more)
unittests/test_charging_models_EVs_at_Risk/: CMakeLists.txt  validate.py
unittests/test_charging_models_eMosaic/: CMakeLists.txt  validate.py
unittests/test_datatypes/: CMakeLists.txt  test_datatypes.cpp
unittests/test_flat_control_strategy/: CMakeLists.txt  plot_results.py  test_flat_control_strategy.cpp
(+120 files in other folders)
