enable_testing()

add_subdirectory(test_charging_models_DirectXFC)
add_subdirectory(test_charging_models_eMosaic)
add_subdirectory(test_charging_models_EVs_at_Risk)
add_subdirectory(test_datatypes)
add_subdirectory(test_flat_control_strategy)
add_subdirectory(test_ToU_ALAP_control_strategy)
add_subdirectory(test_ToU_FLAT_control_strategy)

add_subdirectory(test_ASAP_control_strategy)
add_subdirectory(test_ALAP_control_strategy)
add_subdirectory(test_ToU_RANDOM_M2_control_strategy)
add_subdirectory(test_ToU_RANDOM_M3_control_strategy)

