if(NOT TARGET multiple_curves_generator)
	add_executable(multiple_curves_generator multiple_curves_generator.cpp )
	target_link_libraries(multiple_curves_generator Charging_models Load_inputs factory Base_aux)
	target_compile_features(multiple_curves_generator PUBLIC cxx_std_17)
	target_include_directories(multiple_curves_generator PUBLIC ${PROJECT_SOURCE_DIR}/source/base)
	target_include_directories(multiple_curves_generator PUBLIC ${PROJECT_SOURCE_DIR}/source/charging_models)
	target_include_directories(multiple_curves_generator PUBLIC ${PROJECT_SOURCE_DIR}/source/factory)
	target_include_directories(multiple_curves_generator PUBLIC ${PROJECT_SOURCE_DIR}/source/load_inputs)

	##install(TARGETS multiple_curves_generator DESTINATION ${PROJECT_SOURCE_DIR}/misc/temperature_aware)
endif()